Correction in footer position, add property z-index

--- a/granadatiles_project/static/less/site.less
+++ b/granadatiles_project/static/less/site.less
@@ -201,6 +201,8 @@ h1,h4{
 .custom-footer{
   background-color: @darkBlue;
   min-height: 50px;
+  position: relative;
+  z-index: -2;
 }
 .socialwide-position{
     width: 25px;
